# vsm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conandata.yml  conanfile.py  conanfile.txt  package_info.json  package_info.schema.json
.github/: testing.ps1  (+3 more)
algorithm/: CMakeLists.txt  conanfile.py
algorithm/include/vsm/algorithm/: exponential_lower_bound.hpp
allocator/: CMakeLists.txt  conanfile.py  requirements.txt
allocator/include/vsm/: allocator.hpp  any_allocator.hpp  new_allocator.hpp
allocator/source/vsm/test/: any_allocator.cpp
allocator_core/: CMakeLists.txt  conanfile.py
allocator_core/include/vsm/: allocator.hpp  default_allocator.hpp  new_allocator.hpp
any/: CMakeLists.txt  conanfile.py
any/include/vsm/: any.hpp  any_interface.hpp  any_ref.hpp
any/source/vsm/test/: any.cpp  any_ref.cpp
bit/: CMakeLists.txt  conanfile.py
bit/include/vsm/: bit_array.hpp  bit_mask.hpp  bit_matrix.hpp  bit_pointer.hpp  bit_ptr.hpp  bit_reference.hpp  bit_span.hpp  bit_vector.hpp
bit/include/vsm/detail/: bit_pointer.hpp
bit/source/: bit_mask.test.cpp
bit/source/vsm/test/: bit_ptr.cpp
cli/: CMakeLists.txt
cli/include/vsm/: cli.hpp
cli/include/vsm/cli/: app.hpp  error.hpp  group.hpp  parse.hpp  style.hpp
container_core/: CMakeLists.txt  conanfile.py
container_core/include/vsm/: array_view.hpp  insert_result.hpp  key_selector.hpp  key_value_pair.hpp
core/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  package_info.json  requirements.txt
core/include/vsm/: allocator.hpp  array.hpp  arrow.hpp  assert.h  atomic.hpp  bit.hpp  concepts.hpp  defer.hpp  exceptions.hpp  float.hpp  hash.hpp  int128.hpp  lazy.hpp  lift.hpp  memory.hpp  numeric.hpp  platform.h  preprocessor.h  relocate.hpp  standard.hpp  tag_invoke.hpp  type_traits.hpp  utility.hpp  violation.h  weak.h
core/include/vsm/detail/: atomic_x86_64.hpp  categories.hpp  float16.hpp  msvc_delete.hpp
core/include/vsm/standard/: string.hpp
core/source/vsm/impl/: assert.cpp  assert.linux.cpp  assert.linux.cpp.ignore  assert.win32.cpp  utility.test.cpp
core/source/vsm/test/: atomic.cpp  float.cpp  relocate.cpp  utility.cpp
core/test_package/: CMakeLists.txt
error_code/: CMakeLists.txt
error_code/include/vsm/: error_code.hpp  std_error_code.hpp
error_code/source/: error_code.cpp
error_code/source/vsm/impl/: std_error_code.cpp
error_code/source/vsm/test/: error_code.cpp
execution/: CMakeLists.txt  conanfile.py  requirements.txt
execution/include/vsm/: execution.hpp
execution/include/vsm/execution/: async_mutex.hpp  execution.hpp  run_queue.hpp  sync_wait.hpp  timer_queue.hpp
execution/source/vsm/impl/: async_mutex.cpp
execution/source/vsm/test/: run_queue.cpp
flags/: CMakeLists.txt  conanfile.py
flags/include/vsm/: flags.hpp
flags/source/: flags.test.cpp
function/: CMakeLists.txt  conanfile.py  requirements.txt
function/include/vsm/: function.hpp  function_view.hpp  static_function.hpp
function/include/vsm/detail/: function.hpp  function_view.hpp
function/source/: function_view.test.cpp
function/source/vsm/test/: function.cpp  function_view.cpp  static_function.cpp
function/test_package/: CMakeLists.txt  conanfile.py
function/test_package/source/: test.cpp
function/tools/: generate_specializations.py
hash_table/: CMakeLists.txt  conanfile.py  requirements.txt
hash_table/include/vsm/: deterministic_map.hpp  hash_map.hpp  hash_map.old.hpp  hash_set.hpp  hash_set.old.hpp  swiss_map.hpp  swiss_set.hpp
hash_table/include/vsm/detail/: ankerl_table.hpp  deterministic_table.hpp  hash_table.hpp  hash_table_layout.hpp  std_table.hpp  swiss_table.hpp  swiss_table.ipp  swiss_table.old.hpp
hash_table/source/vsm/impl/: deterministic_table.cpp  swiss_table.cpp  swiss_table.old.cpp
hash_table/source/vsm/test/: deterministic_map.cpp  hash_map.cpp  hash_map.old.cpp  hash_set.old.cpp  swiss_map.cpp  swiss_table.cpp
hash_table/visualizers/vsm/: hash_table.natvis
intrusive/: CMakeLists.txt  conanfile.py  package_info.json  requirements.txt
intrusive/include/vsm/intrusive/: avl_tree.hpp  forward_list.hpp  heap.hpp  link.hpp  list.hpp  mpsc_queue.hpp  rb_tree.hpp  wb_tree.hpp
intrusive_ptr/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  requirements.txt
intrusive_ptr/include/vsm/: atomic_intrusive_ptr.hpp  intrusive_ptr.hpp
intrusive_ptr/source/vsm/impl/: intrusive_ptr.test.cpp
intrusive_ptr/source/vsm/test/: atomic_intrusive_ptr.cpp  intrusive_ptr.cpp
linear/: CMakeLists.txt  conanfile.py  requirements.txt
linear/include/vsm/: linear.hpp
ntdll/: CMakeLists.txt  conanfile.py  parser.c
pascal_string/: CMakeLists.txt  conanfile.py
pascal_string/include/vsm/: pascal_string.hpp
pascal_string/source/vsm/impl/: pascal_string.test.cpp
prop_cv/: CMakeLists.txt  conanfile.py
prop_cv/include/vsm/: prop_cv.hpp
prop_cv/source/vsm/test/: prop_cv.cpp
propagate_const/: CMakeLists.txt  conanfile.py
propagate_const/include/vsm/: propagate_const.hpp
result/: CMakeLists.txt  conanfile.py
result/include/vsm/: result.hpp  try_for.hpp
result/source/: result.test.cpp
shared_string/: CMakeLists.txt  conanfile.py  requirements.txt
shared_string/include/vsm/: shared_string.hpp
shared_string/visualizers/vsm/: shared_string.natvis
tag_ptr/: CMakeLists.txt  conanfile.py
tag_ptr/include/vsm/: tag_ptr.hpp
test_allocator/: CMakeLists.txt  conanfile.py  requirements.txt
test_core/: CMakeLists.txt  conanfile.py
test_tools/: CMakeLists.txt  conanfile.py
unique_resource/: CMakeLists.txt  conanfile.py
unique_resource/include/vsm/: out_resource.hpp  out_unique_resource.hpp  unique_resource.hpp
unique_resource/source/: unique_resource.test.cpp
vector/: CMakeLists.txt  conanfile.py  requirements.txt
vector/cmake_build_modules/: configure_visualizers.cmake
vector/include/vsm/: vector.hpp
vector/visualizers/vsm/: vector.natvis
work_stealing_queue/: CMakeLists.txt  conanfile.py  requirements.txt
work_stealing_queue/include/vsm/: bounded_work_stealing_queue.hpp  work_stealing_queue.hpp
(+398 files in other folders)
