cmake_minimum_required(VERSION 3.23)

project(vsm_root)

include(cmake/cmake/bootstrap.cmake)
vsm_add_aggregate_test(vsm_test)

add_subdirectory(algorithm)
add_subdirectory(allocator)
add_subdirectory(core)
add_subdirectory(container_core)
add_subdirectory(error_code)
add_subdirectory(flags)
add_subdirectory(function)
add_subdirectory(hash)
add_subdirectory(hash_table)
#add_subdirectory(inspect)
add_subdirectory(intrusive)
add_subdirectory(intrusive_ptr)
add_subdirectory(linear)
add_subdirectory(math)
add_subdirectory(optional)
add_subdirectory(pascal_string)
add_subdirectory(propagate_const)
add_subdirectory(result)
#add_subdirectory(shared_string)
add_subdirectory(tag_ptr)
add_subdirectory(test_tools)
add_subdirectory(unique_resource)
#add_subdirectory(vector)
