cmake_minimum_required(VERSION 3.24)

project(vsm)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

# Add the vsm-cmake module include directory to the module path.
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/cmake")

include(vsm)

vsm_add_aggregate_test(vsm_test)

add_subdirectory(algorithm)
add_subdirectory(allocator)
add_subdirectory(any)
add_subdirectory(bit)
add_subdirectory(casting)
add_subdirectory(core)
add_subdirectory(container_core)
#add_subdirectory(error_code)
add_subdirectory(execution)
add_subdirectory(flags)
add_subdirectory(function)
add_subdirectory(hash)
add_subdirectory(hash_table)
#add_subdirectory(inspect)
add_subdirectory(intrusive)
add_subdirectory(intrusive_ptr)
add_subdirectory(linear)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(mpsc_queue)
add_subdirectory(optional)
add_subdirectory(pascal_string)
add_subdirectory(prop_cv)
add_subdirectory(result)
add_subdirectory(shared_string)
add_subdirectory(shared_vector)
add_subdirectory(static_string)
add_subdirectory(striding)
add_subdirectory(tag_ptr)
add_subdirectory(test_tools)
add_subdirectory(unique_resource)
add_subdirectory(vector)
add_subdirectory(work_stealing_queue)
